2. Variante bei Level 3_1 erstellt

--- a/functions-level-3_1/assets/css/style.css
+++ b/functions-level-3_1/assets/css/style.css
@@ -79,7 +79,7 @@ h1 {
 }
 
 #ball1 {
-    background: linear-gradient(to top right, rgb(50,156,94) 50%, rgb(121,9,106) 50%);
+    background: linear-gradient(to top right, rgb(50, 156, 94) 50%, rgb(121,9,106) 50%);
 }
 
 #ball2 {
